include ability to provide month and year in report request
